welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:44: error: not found: value True
      fini = True ;
             ^